# HMI_Car

./: CMakeLists.txt  HomeScreen.qml  IconButton.qml  LightingCard.qml  Main.qml  MediaScreen.qml  VehicleScreen.qml  WeatherCard.qml  font.qrc  image.qrc  images.qrc  main.cpp
components/: AdasToggle.qml  DialKey.qml  NavButton.qml  TireLabel.qml
src/: climatebackend.cpp  climatebackend.h  vehiclebackend.cpp  vehiclebackend.h
